--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -2,15 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Django app</title>
+    <title>{% block title %}Django app{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
   </head>
   <body>
-    <div id="container">
-      {% block content %}
-      {% endblock %}
+    <div>
+      <div class="navbar">
+        {% if user.is_authenticated %}
+          Logged in as {{user.username}}
+          <a href="{% url base.views.password_change %}">Change password</a>
+        {% endif %}
+      </div>
+      <div id="container">
+        {% block content %}
+        {% endblock %}
+      </div>
     </div>
   </body>
 </head>
