--- a/base/templates/registration/login.html
+++ b/base/templates/registration/login.html
@@ -4,6 +4,22 @@
 
 {{ form.errors.non_field_errors }}
 
+{% if form.errors %}
+  {% for error in form.non_field_errors %}
+    <div class="alert alert-error">
+      {{ error }}
+    </div>
+  {% endfor %}
+{% endif %}
+{% for field in form.visible_fields %}
+  {% for error in field.errors %}
+    <div class="alert alert-error">
+      {{ error }}
+    </div>
+  {% endfor %}
+{% endfor %}
+
+
 <form method="post" action="{% url base.views.login %}">
 {% csrf_token %}
 <table>
