Accounts: New password reset templates
* changed templates from registration to account

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -13,7 +13,21 @@
         {% if user.is_authenticated %}
           Logged in as {{user.username}}
           <a href="{% url base.views.password_change %}">Change password</a>
+          <a href="{% url base.views.logout %}">Logout</a>
+        {% else %}
+          <a href="{% url base.views.password_reset %}">Recover password</a>
         {% endif %}
+      </div>
+      <div class="container-fluid">
+        <div class="row-fluid">
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+        </div><!--/row-->
       </div>
       <div id="container">
         {% block content %}
