Now, on the login page, the email input has focus

--- a/base/templates/accounts/login.html
+++ b/base/templates/accounts/login.html
@@ -2,6 +2,10 @@
 
 {% load i18n static %}
 
+{% block javascripts %}
+  <script src="{{STATIC_URL}}js/login.js"></script>
+{% endblock %}
+
 {% block content %}
 
 {% if form.errors %}
