--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -11,22 +11,22 @@
     <div>
       <div class="navbar">
         {% if user.is_authenticated %}
-          Logged in as {{user.username}}
-          <a href="{% url base.views.password_change %}">Change password</a>
-          <a href="{% url base.views.logout %}">Logout</a>
+        Logged in as {{user.username}}
+        <a href="{% url base.views.password_change %}">Change password</a>
+        <a href="{% url base.views.logout %}">Logout</a>
         {% else %}
-          <a href="{% url base.views.password_reset %}">Recover password</a>
-          <a href="{% url base.views.user_new %}">Register</a>
+        <a href="{% url base.views.password_reset %}">Recover password</a>
+        <a href="{% url base.views.user_new %}">Register</a>
         {% endif %}
       </div>
       <div class="container-fluid">
         <div class="row-fluid">
           {% if messages %}
-            {% for message in messages %}
-              <div class="alert alert-{{ message.tags }}">
-                {{ message }}
-              </div>
-            {% endfor %}
+          {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+          </div>
+          {% endfor %}
           {% endif %}
         </div><!--/row-->
       </div>
@@ -34,6 +34,11 @@
         {% block content %}
         {% endblock %}
       </div>
+      <!-- Le javascript
+      ================================================== -->
+      <!-- Placed at the end of the document so the pages load faster -->
+      {% block javascripts %}
+      {% endblock %}
     </div>
   </body>
 </head>
