--- a/base/templates/accounts/login.html
+++ b/base/templates/accounts/login.html
@@ -18,7 +18,7 @@
 
 
 
-<form method="post" action="{% url base.views.login %}">
+<form method="post" action="{% url 'base.views.login' %}">
 {% csrf_token %}
 <table>
 <tr>
