--- a/users/templates/accounts/login.html
+++ b/users/templates/accounts/login.html
@@ -18,7 +18,7 @@
 
 
 
-<form method="post" action="{% url 'base.views.login' %}">
+<form method="post" action="{% url 'users.views.login' %}">
 {% csrf_token %}
 <table>
 <tr>
