--- a/users/templates/emails/user_new.html
+++ b/users/templates/emails/user_new.html
@@ -3,7 +3,7 @@
 
 {% trans "Please go to the following page to confirm your email address:" %}
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'base.views.user_new_confirm' uidb36=uid token=token %}
+{{ protocol }}://{{ domain }}{% url 'users.views.user_new_confirm' uidb36=uid token=token %}
 {% endblock %}
 
 {% trans "Thanks for using our site!" %}
