Included bootstrap and jquery into de project

--- a/users/templates/accounts/login.html
+++ b/users/templates/accounts/login.html
@@ -45,7 +45,7 @@
 </tr>
 </table>
 
-<input type="submit" value="{% trans 'Login' %}" />
+<input type="submit" class="btn" value="{% trans 'Login' %}" />
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
