--- a/users/templates/accounts/password_change.html
+++ b/users/templates/accounts/password_change.html
@@ -43,7 +43,7 @@
 </fieldset>
 
 <div class="submit-row">
-    <input type="submit" value="{% trans 'Change my password' %}" class="default" />
+    <input type="submit" value="{% trans 'Change my password' %}" class="default btn" />
 </div>
 
 <script type="text/javascript">document.getElementById("id_old_password").focus();</script>
