--- a/users/templates/accounts/user_new.html
+++ b/users/templates/accounts/user_new.html
@@ -32,7 +32,7 @@
   {% endfor %}
 </table>
 
-<input type="submit" value="{% trans 'Register' %}" />
+<input type="submit" value="{% trans 'Register' %}" class="btn"/>
 </form>
 
 {% endblock %}
