--- a/users/templates/accounts/password_reset_form.html
+++ b/users/templates/accounts/password_reset_form.html
@@ -11,9 +11,20 @@
 
 <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
 
-<form action="" method="post">{% csrf_token %}
-{{ form.email.errors }}
-<p><label for="id_email">{% trans 'E-mail address:' %}</label> {{ form.email }} <input type="submit" value="{% trans 'Reset my password' %}" /></p>
+<form action="" method="post" class="form-horizontal">
+  {% csrf_token %}
+  {{ form.email.errors }}
+  <div class="control-group">
+    <label for="id_email" class="control-label">{% trans 'E-mail address:' %}</label>
+    <div class="controls">
+      {{ form.email }}
+    </div>
+  </div>
+  <div class="control-group">
+    <div class="controls">
+      <input type="submit" value="{% trans 'Reset my password' %}" class="btn"/>
+    </div>
+  </div>
 </form>
 
 {% endblock %}
