Included a link to the home page in the admin site

--- a/config/templates/admin/base_site.html
+++ b/config/templates/admin/base_site.html
@@ -5,6 +5,15 @@
 
 {% block branding %}
 <a class="brand" href="{% url 'admin:index' %}">{% trans 'Project administration' %}</a>
+<div class="nav-collapse collapse">
+  <ul class="nav">
+    <li class="">
+    <a href="{% url 'home' %}">
+      {% trans 'home' %}
+    </a>
+    </li>
+  </ul>
+</div>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
