--- a/users/templates/admin/users/user/add_form.html
+++ b/users/templates/admin/users/user/add_form.html
@@ -3,9 +3,9 @@
 
 {% block form_top %}
   {% if not is_popup %}
-    <p>{% trans "First, enter a username and password. Then, you'll be able to edit more user options." %}</p>
+    <p>{% trans "First, enter an email and password. Then, you'll be able to edit more user options." %}</p>
   {% else %}
-    <p>{% trans "Enter a username and password." %}</p>
+    <p>{% trans "Enter an email and password." %}</p>
   {% endif %}
 {% endblock %}
 
