--- a/users/templates/accounts/login.html
+++ b/users/templates/accounts/login.html
@@ -28,14 +28,14 @@
   <div class="form-group">
     <label for="id_email" class="control-label col-lg-2 required">{% trans 'E-mail:' %}</label> 
     <div class="col-lg-10">
-        {{ form.email }}
+        <input class="form-control" id="id_email" name="email" type="text" placeholder="{% trans 'E-mail' %}">
         <span class="help-inline">{{ form.email.errors|striptags }}</span>
     </div>
   </div>
   <div class="form-group">
     <label for="id_password" class="control-label col-lg-2 required">{% trans 'Password:' %}</label> 
     <div class="col-lg-10">
-        {{ form.password }}
+        <input class="form-control" id="id_password" name="password" type="text" placeholder="{% trans 'Password' %}">
         <span class="help-inline">{{ form.password.errors|striptags }}</span>
     </div>
     <input type="hidden" name="this_is_the_login_form" value="1" />
