--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -95,7 +95,7 @@ html(lang="es")
 
       // uncompressible javascripts
       {% if debug %}
-      script(src="{% static 'js/jquery-1.10.1.min.js' %}")
+      script(src="{% static 'bower_components/jquery/jquery.min.js' %}")
       {% else %}
       script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js")
       {% endif %}
