Replaced the code handling chosen with select2

--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -16,7 +16,7 @@ html(lang="es")
     link(href="{% static 'django_tables2/themes/paleblue/css/screen.css' %}", rel="stylesheet")
     link(href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}", rel="stylesheet")
     link(href="{% static 'bower_components/bootstrap-datepicker/css/datepicker.css' %}", rel="stylesheet")
-    link(href="{% static 'bower_components/chosen/chosen.css' %}", rel="stylesheet")
+    link(href="{% static 'bower_components/select2/select2.css' %}", rel="stylesheet")
     link(href="{% static 'css/bootstrap_custom.css' %}", rel="stylesheet")
     link(href="{% static 'css/site.css' %}", rel="stylesheet")
     link(href="{% static 'css/detail.css' %}", rel="stylesheet")
@@ -113,7 +113,8 @@ html(lang="es")
       script(src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}")
       script(src="{% static 'bower_components/bootstrap-datepicker/js/bootstrap-datepicker.js' %}")
       script(src="{% static 'bower_components/bootstrap-datepicker/js/locales/bootstrap-datepicker.es.js' %}")
-      script(src="{% static 'bower_components/chosen/chosen.jquery.js' %}")
+      script(src="{% static 'bower_components/select2/select2.min.js' %}")
+      script(src="{% static 'bower_components/select2/select2_locale_es.js' %}")
       script(src="{% static 'js/site.js' %}")
       script(src="{% static 'js/form.js' %}")
       {% endcompress %}
