New block in base/templastes/base.jade: javascript_data

--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -119,6 +119,8 @@ html(lang="es")
       script(src="{% static 'js/form.js' %}")
       {% endcompress %}
 
+      block javascript_data
+
       {% compress js %}
       block javascripts
       {% endcompress %}
