--- a/base/templates/form.jade
+++ b/base/templates/form.jade
@@ -1,5 +1,5 @@
 extends base
-{% load i18n static %}
+- load i18n static
 
 block javascripts
 
@@ -23,3 +23,12 @@ block content
     div
       form.model-form.form-horizontal(method="post", enctype="multipart/form-data", role="form")
         {% include "includes/form.jade"%}
+
+        div.form-group
+          div.col-md-offset-3.col-md-9
+            block form_buttons
+              a.btn.btn-danger(href="/") Cancelar
+              button.btn.btn-primary.btn-submit(type="submit")
+                | {% block submit_button_value%}Guardar{% endblock%}
+    div
+      block after_form
