--- a/base/templates/includes/fieldset.jade
+++ b/base/templates/includes/fieldset.jade
@@ -1,4 +1,4 @@
-- load i18n static
+- load i18n
 
 - if fieldset.legend
   legend {{ fieldset.legend }}
@@ -7,24 +7,4 @@
   p.description {{ fieldset.description }}
 
 - for field in fieldset
-
-  - if field.field.is_checkbox
-    div.col-md-offset-3.col-md-9
-      div.checkbox
-        label {{field.label}}
-          {{field }}
-  - else
-    div.form-group(class="{% if field.errors %}has-error{% endif %}")
-      .row
-        .col-sm-8
-          label(for="id_{{field.name}}")
-            | {{field.label}}
-            - if not field.field.required
-              | ({% trans 'optional' %})
-        .col-sm-4
-          p.help-block(for="id_{{field.name}}")
-            {% for error in field.errors %}
-            | {{ error }}
-            {% endfor %}
-      {{ field }}
-      p {{ field.help_text }}
+  {% include 'base/templates/includes/field.jade' %}
