Fixed a bug when includeing the field.jade partial in fieldset.jade

--- a/base/templates/includes/fieldset.jade
+++ b/base/templates/includes/fieldset.jade
@@ -7,4 +7,4 @@
   p.description {{ fieldset.description }}
 
 - for field in fieldset
-  {% include 'base/templates/includes/field.jade' %}
+  {% include 'includes/field.jade' %}
