--- a/base/templates/includes/field.jade
+++ b/base/templates/includes/field.jade
@@ -7,16 +7,15 @@
         {{field }}
 - else
   div.form-group(class="{% if field.errors %}has-error{% endif %}")
-    .row
-      .col-sm-8
-        label(for="id_{{field.name}}")
-          | {{field.label}}
-          - if not field.field.required
-            | ({% trans 'optional' %})
-      .col-sm-4
-        p.help-block(for="id_{{field.name}}")
-          {% for error in field.errors %}
-          | {{ error }}
-          {% endfor %}
-    {{ field }}
-    p {{ field.help_text }}
+    label.col-sm-3(for="id_{{field.name}}")
+      | {{field.label}}
+      - if not field.field.required
+        | ({% trans 'optional' %})
+    .col-sm-9
+      {{ field }}
+    .col-sm-12
+      span.help-block.text-right(for="id_{{field.name}}")
+        {% for error in field.errors %}
+        | {{ error }}
+        {% endfor %}
+        | {{ field.help_text }}
