Now the login button in the navbar sets the "next" parameter

--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -84,7 +84,7 @@ html(lang="es")
 
                 ul.dropdown-menu
                   li
-                    a(href="{% url 'login' %}")
+                    a(href="{% url 'login' %}?next={{request.path}}")
                       | Login
                   li
                     a(href="{% url 'users.views.password_reset' %}")
