Updated font-awesome to 4.1

--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -13,7 +13,7 @@ html(lang="es")
     meta(name="author", content="http://magnet.cl")
 
     // font-awesome
-    link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css",
+    link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css",
       rel="stylesheet")
 
     {% compress css %}
