--- a/base/templates/form.jade
+++ b/base/templates/form.jade
@@ -29,7 +29,7 @@ block content
         div.form-group
           div.col-md-offset-3.col-md-9
             block form_buttons
-              a.btn.btn-danger(href="/") Cancelar
+              a.btn.btn-danger(href="{{cancel_url}}") Cancelar
               button.btn.btn-primary.btn-submit(type="submit")
                 | {% block submit_button_value%}Guardar{% endblock%}
     div
