--- a/base/templates/includes/navbar.jade
+++ b/base/templates/includes/navbar.jade
@@ -30,10 +30,12 @@ div.navbar.navbar-inverse.navbar-fixed-top
 
           ul.dropdown-menu
             li
-              a(href="{% url 'users.views.password_change' %}")
+              a(href="{% url 'user_profile' %}") Mi perfil
+            li
+              a(href="{% url 'password_change' %}")
                 | Modificar Contraseña
             li
-              a(href="{% url 'users.views.logout' %}") Logout
+              a(href="{% url 'logout' %}") Logout
         {% else %}
         li.dropdown
           a.dropdown-toggle(href="#", data-toggle="dropdown")
@@ -45,6 +47,6 @@ div.navbar.navbar-inverse.navbar-fixed-top
               a(href="{% url 'login' %}?next={{request.path}}")
                 | Login
             li
-              a(href="{% url 'users.views.password_reset' %}")
+              a(href="{% url 'password_reset' %}")
                 | Recover password
         {% endif %}
