Changed the style of the form header

--- a/base/templates/form.jade
+++ b/base/templates/form.jade
@@ -9,8 +9,7 @@ block stylesheets
 
 block content
   div.content.clear_down
-    div.box_profile_info
-      h3
+    h1.page-header
         block form_title
     div
       {% if form.errors %}
