--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -13,8 +13,16 @@ html(lang="es")
     meta(name="author", content="http://magnet.cl")
 
     // font-awesome
-    link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css",
-      rel="stylesheet")
+    if debug
+      link(
+        href="{% static 'bower_components/font-awesome/css/font-awesome.min.css' %}",
+        rel="stylesheet"
+      )
+    else
+      link(
+        href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css",
+        rel="stylesheet"
+      )
 
     {% compress css %}
     link(href="{% static 'css/bootstrap/bootstrap.less' %}", rel="stylesheet", type="text/less", charset="utf-8")
