--- a/base/static/css/site.less
+++ b/base/static/css/site.less
@@ -1,3 +1,5 @@
+@import "bootstrap/variables.less";
+
 .hide {
     display: hidden;
 }
@@ -5,6 +7,21 @@
 body {
     padding-top: 60px;
     padding-bottom: 40px;
+
+    .page-loading-icon {
+        color: @brand-primary;
+        display: none;
+        left: 10px;
+        position: relative;
+    }
+
+    &.wait {
+        cursor: wait !important;
+
+        .page-loading-icon {
+            display: inline-block;
+        }
+    }
 }
 
 @media (max-width: 560px) {
