--- a/base/templates/includes/navbar.jade
+++ b/base/templates/includes/navbar.jade
@@ -9,6 +9,7 @@ div.navbar.navbar-inverse.navbar-fixed-top
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href="{% url 'home' %}") Project
+        i.fa.fa-spinner.fa-spin.page-loading-icon
     div.navbar-collapse.collapse
       - if user.is_authenticated 
         {% if user.is_staff %}
