Delete bootstrap folder and use bootstrap in bower components

--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -72,7 +72,7 @@ html(lang="es")
       {% compress js %}
       script(src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}")
       script(src="{% static 'bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js' %}")
-      script(src="{% static 'bower_components/bootstrap-datepicker/dist/js/locales/bootstrap-datepicker.es.js' %}")
+      script(src="{% static 'bower_components/bootstrap-datepicker/dist/locales/bootstrap-datepicker.es.min.js' %}")
       script(src="{% static 'bower_components/select2/select2.min.js' %}")
       script(src="{% static 'bower_components/select2/select2_locale_es.js' %}")
       script(src="{% static 'js/vendor/oop.js' %}")
