--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -25,7 +25,7 @@ html(lang="es")
       )
 
     {% compress css %}
-    link(href="{% static 'css/bootstrap/bootstrap.less' %}", rel="stylesheet", type="text/less", charset="utf-8")
+    link(href="{% static 'css/bootstrap.less' %}", rel="stylesheet", type="text/less", charset="utf-8")
     link(href="{% static 'bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css' %}", rel="stylesheet")
     link(href="{% static 'bower_components/select2/select2.css' %}", rel="stylesheet")
     link(type="text/less", rel="stylesheet", href="{% static 'css/site.less' %}",
