Fix the action attribute of the password change change form

--- a/users/templates/accounts/password_change.jade
+++ b/users/templates/accounts/password_change.jade
@@ -24,7 +24,7 @@ block content
 
     .row
       .col-sm-7.col-sm-offset-1
-        form.form-signin.form-horizontal(action="{% url 'users.views.login' %}",
+        form.form-signin.form-horizontal(action="",
           method='post')
           {% csrf_token %}
 
@@ -35,7 +35,7 @@ block content
                 {% trans 'Old password' %}:
 
               .col-sm-8
-                input#id_old_password.form-control(name='old_password', type='text',
+                input#id_old_password.form-control(name='old_password', type='password',
                   placeholder="{% trans 'Old password' %}")
                 span.help-inline.help-block {{ form.old_password.errors|striptags }}
 
@@ -44,7 +44,7 @@ block content
                 {% trans 'New password' %}:
 
               .col-sm-8
-                input#id_new_password1.form-control(name='new_password1', type='text',
+                input#id_new_password1.form-control(name='new_password1', type='password',
                   placeholder="{% trans 'New password' %}")
                 span.help-inline.help-block {{ form.new_password1.errors|striptags }}
 
@@ -53,7 +53,7 @@ block content
                 {% trans 'Password (again)' %}:
 
               .col-sm-8
-                input#id_new_password2.form-control(name='new_password2', type='text',
+                input#id_new_password2.form-control(name='new_password2', type='password',
                   placeholder="{% trans 'Password (again)' %}")
                 span.help-inline.help-block {{ form.new_password2.errors|striptags }}
 
